<resources>
    <string name="app_name">My Trimet Pro</string>
        <string name="title_activity_maps">MapsActivity</string>
        <string name="title_activity_map">Map</string>
        <string name="finalDestination">final_destination</string>
        <string name="no_network_message">No Network Available</string>
        <string name="show_more_destinations">Show more destination history</string>
        <string name="end_of_list">End of list</string>
        <string name="canceled">The user canceled the operation</string>
        <string name="active_route">Active Route:</string>
        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="action_settings">Settings</string>
        <string name="current_location_marker">I\'m here</string>
        <string name="placeAutocomplete_Failed_MapActivity">PlaceAutocomplete failed in MapActivity</string>
        <string name="configuring_Google_client">Configuring client</string>
        <string name="connection_Suspended">ConnectionSuspended:</string>
        <string name="permission_denied">Permission denied</string>
        <string name="title_activity_preferences">PreferencesActivity</string>
        <string name="google_api_failed_connection">Unable to get current location due to connection failure...</string>
        <string name="google_api_failed_location_check">Unable to find current location. Please enable location services.</string>
        <string name="current_location">Current Location</string>
        <string name="permission_denied_toast">The whole purpose of this app is to use your location... Please allow location services</string>
        <string name="arrive">arrive</string>
        <string name="minutes_early">min early</string>
        <string name="first_notification_drawer_title">Notification for when to begin your trip</string>
        <string name="save">Save</string>
        <string name="on">on</string>
        <string name="off">off</string>
        <string name="saved">saved</string>
        <string name="notification_enabled">Notification enabled</string>
        <string name="notification_disabled">Notification disabled</string>
        <string name="empty_route_response">A route to your destination could not be created...</string>
        <string name="invalid_destination">You can not get notifications for an invalid destination...</string>
        <string name="no_arrival_time">No arrival time predicted</string>
        <string name="out_of_trimet_bounds">Destination was outside of the trimet bounds. Unable to calculate a route...</string>
        <string name="from_departure_time">%1$s from departure time</string>
        <string name="notification_message">Your next vehicle will reach it\'s stop in %1$d minutes!</string>
        <string name="notification_title">Time to leave</string>
        <string name="demo_toast">"Notification to depart will occur at "</string>
        <string name="nav_home">Home</string>
        <string name="nav_map">Map</string>
        <string name="nav_settings">Settings</string>
        <string name="error_message_permission">Failed to get Location Permission</string>
        <string name="settings">Settings</string>
        <string name="arrival_time">Arrival time: %1$s</string>
        <string name="notifications_are_off">Notifications are off</string>
        <string name="error_title">Warning</string>
        <string name="error_message">Cannot detect a vehicle en-route to the first stop.</string>
        <string name="error_ok_button_text">Okay, thanks</string>
        <string name="route_cancelled">Route cancelled</string>
        <string name="route_active">Route is active</string>
        <string name="early_vehicle">Early</string>
        <string name="at_vechicle_capacity">At Capacity</string>
        <string name="vechicle_in_congestion">In Congestion</string>
        <string name="minutes_abbreviated" formatted="false">%1$s %2$d min</string>
    <string name="no_current_location_for_route">Current Location Not Yet Acquired, Retry Destination Once the Marker Appears</string>
</resources>
