<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolsBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintLeft_toLeftOf="@+id/activity_settings"
        app:layout_constraintTop_toTopOf="@+id/activity_settings"
        app:layout_constraintRight_toRightOf="@+id/activity_settings"
        app:layout_constraintHorizontal_bias="0.0">

        <ImageView
            android:src="@drawable/ic_arrow_back_white_24dp"
            android:layout_width="@dimen/large"
            android:layout_height="@dimen/large"
            android:scaleType="centerInside"
            android:id="@+id/backArrow"
            app:layout_constraintLeft_toLeftOf="@+id/toolbar"/>

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_medium"/>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/preference_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_notification_drawer_title"
        android:textSize="@dimen/margin_small_medium"
        android:textStyle="normal|bold"
        app:layout_constraintLeft_toLeftOf="@+id/activity_settings"
        android:layout_marginStart="@dimen/text_size_small"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginTop="@dimen/text_size_small"
        app:layout_constraintRight_toRightOf="@+id/activity_settings"
        android:layout_marginEnd="@dimen/margin_small"/>

    <TextView
        android:id="@+id/picker_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrive"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintLeft_toLeftOf="@+id/preference_title"
        app:layout_constraintTop_toTopOf="@+id/post_picker_description"
        app:layout_constraintRight_toLeftOf="@+id/post_picker_description"
        android:layout_marginEnd="@dimen/margin_Xlarge"
        app:layout_constraintBottom_toBottomOf="@+id/post_picker_description"
        app:layout_constraintVertical_bias="1.0"/>

    <NumberPicker
        android:id="@+id/number_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toBottomOf="@+id/preference_title"
        app:layout_constraintRight_toLeftOf="@+id/post_picker_description"/>

    <TextView
        android:id="@+id/post_picker_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes_early"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintTop_toTopOf="@+id/switch_off_text"
        app:layout_constraintRight_toLeftOf="@+id/switch_off_text"
        android:layout_marginEnd="@dimen/padding_large"
        app:layout_constraintBottom_toBottomOf="@+id/switch_off_text"
        app:layout_constraintVertical_bias="1.0"/>


    <Switch
        android:id="@+id/on_off_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        app:layout_constraintTop_toTopOf="@+id/switch_on_text"
        app:layout_constraintRight_toLeftOf="@+id/switch_on_text"
        android:layout_marginEnd="@dimen/margin_Xsmall"
        app:layout_constraintBottom_toBottomOf="@+id/switch_on_text"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="@dimen/XXlarge"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="@+id/activity_settings"
        android:layout_marginStart="@dimen/text_size_small"
        app:layout_constraintRight_toRightOf="@+id/activity_settings"
        android:layout_marginEnd="@dimen/text_size_small"
        app:layout_constraintBottom_toBottomOf="@+id/activity_settings"
        android:layout_marginBottom="@dimen/text_size_small"/>

    <TextView
        android:id="@+id/switch_off_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/off"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintTop_toTopOf="@+id/on_off_switch"
        app:layout_constraintRight_toLeftOf="@+id/on_off_switch"
        android:layout_marginEnd="@dimen/margin_Xsmall"
        app:layout_constraintBottom_toBottomOf="@+id/on_off_switch"/>

    <TextView
        android:id="@+id/switch_on_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintTop_toBottomOf="@+id/preference_title"
        android:layout_marginTop="@dimen/margin_XXlarge"
        app:layout_constraintRight_toRightOf="@+id/preference_title"/>


</android.support.constraint.ConstraintLayout>
